Fixing button text on safari.

--- a/src/components/search-box/search-box.styles.scss
+++ b/src/components/search-box/search-box.styles.scss
@@ -26,7 +26,8 @@ form {
     .submit-button {
         border: none;
         background: none;
-        border: 2px solid #FF0080;;
+        border: 2px solid #FF0080;
+        color: black;
         text-transform: uppercase;
         letter-spacing: .5rem;
         list-style: none;
